<resources>
    <string name="title_activity_play_game">PlayGame</string>
    <string name="app_name">SAVE LIFE</string>
    <string name="LvSet">難度選擇</string>
    <string name="TimeSet">時間選擇</string>
    <string name="DCBtton">難度設定確認</string>
    <string name="BHButton">返回首頁</string>
    <string name="UserName">冒險者</string>
    <string name="SetUp">設定</string>
    <string name="reset">重新遊戲</string>
    <string name="exit">結束遊戲</string>
    <string name="GameFinish">遊戲結束!</string>
    <string name="ok">確認</string>
    <string name="cancel">取消</string>
    <string name="erro">錯誤</string>
    <string name="setup_name">Project_setup</string>
    <string name="okay">確定</string>
    <string name="clean_record">執行重置後，所有資料將會清除，確定執行嗎？</string>
    <string name="no_idea">沒意見</string>

    <string name="button_text1">資料重置</string>
    <string name="button_text6">版權說明</string>
    <string name="button_text7">遊戲設定</string>


    <string name="main">讓我們來一起拯救瀕臨絕種動物吧!!</string>
    <string name="guest">冒險家：</string>
    <string name="username">請輸入您的名字</string>

    <string name="user01">未創建帳號</string>
    <string name="user02">未創建帳號</string>
    <string name="user03">未創建帳號</string>
    <string name="BEnter">進入遊戲</string>

    <string name="intro">準備好展開奇妙旅程了嗎?</string>
    <string name="Bstart">開始遊戲</string>
    <string name="BCopyright">版權說明</string>
    <string name="BGallery">動物圖鑑</string>
    <string name="BSetup">遊戲設定</string>
    <string name="BYoho">開發者選項</string>

    <string-array name="gs">
        <item>音量設定</item>
        <item>資料重置</item>
    </string-array>

    <string-array name="crl">
        <item>資料出處</item>
        <item>製作團隊</item>
    </string-array>

    <string-array name="lsary">
        <item>簡單(4x5)</item>
        <item>普通(4x6)</item>
        <item>困難(4x7)</item>
    </string-array>

    <string-array name="items">
        <item>90</item>
        <item>60</item>
        <item>30</item>
    </string-array>

    <string-array name="tsary">
        <item>90秒</item>
        <item>60秒</item>
        <item>30秒</item>
    </string-array>
    <string name="title_activity_new_user">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- for gallery-->
    <string name="logo1">石虎\n石虎或俗稱山貓、錢貓、豹貓，是產於亞洲的貓科石虎屬野生動物。石虎的體型與家貓大致相仿，以外表來看容易誤認為家貓，因此偶有野生石虎被當家貓領養，但各亞種的差別比較大，例如印度尼西亞的亞種平均體長45厘米，尾長20厘米，而西伯利亞的亞種體長則達到60厘米，尾長40厘米。石虎的毛皮也有很多種顏色：南方的石虎為黃色，北方的則為銀灰色(推測與適應各種生活環境有關)。胸部及腹部是白色。石虎的斑點一般為黑色。石虎是夜行動物，通常以嚙齒類、鳥類、魚類、爬行類及小型哺乳動物為食。除了交配季節外，它們一般為獨處。石虎的妊娠期為65到70天，每胎2到4個後代。</string>
    <string name="logo2">歐亞水獺\n，或簡稱水獺，是亞洲及歐洲的一種水獺，棲息在淡水環境。牠們與北美水獺不同的是頸部較短、臉面較闊、耳朵相距較遠及尾巴較長。分布及棲息地歐亞水獺(Common otter)是分布區域最廣的水獺，歐亞水獺主要都是獨居的。牠們的領地約1到40公里長，一般長18公里。領地的長短視乎食物供應及適合獵食的河流闊度。牠們的領地只抗拒同性，故雄獺及雌獺的領地是重疊的。雄獺及雌獺全年任何時間都可以繁殖，會在水中交配。妊娠期約63日，每胎會產1到4隻幼獺，頭一年會依賴母獺。雄獺不會照顧幼獺，雌獺與幼獺的領地很多時都完全包含在雄獺的領地中。牠們會於夜間覓食，日間則會留在巢穴中。牠們的巢穴很多是河床附近的洞穴或樹孔，很多時要在水中進入。</string>
    <string name="logo3">台灣長鬃山羊\n又稱台灣鬣羚、台灣野山羊、台灣羚羊、台灣氈鹿，是台灣特有種的動物，也是台灣唯一的野生牛科動物。由低海拔200公尺的小山，一直到高海拔之玉山南峰、南湖圈谷和雪山圈谷等高山附近，都可以找到台灣長鬃山羊的足跡。目前在1000公尺以上的山區，牠們的出現機會比較高。型態特徵：頭及軀幹長80到114厘米，尾長約6.5厘米，體重25 -35公斤。大部分為深褐色，背頸中央一帶為黑色。腮、喉部和上頸為淺黃褐色，雌雄皆有一對洞角，呈圓椎狀，頂端尖銳且略向後曲，終生不脫落。</string>
    <string name="logo4">臺灣水鹿\n又稱四目鹿，是一種在臺灣特有的水鹿亞種，是台灣最大型的草食動物，會進行季節性的換毛以偽裝，夏季體色較淡，為黃褐色，冬季則為暗褐色。臺灣水鹿眼下具有明顯的眼下腺，於生氣或興奮時會張開，故又有「四目鹿」之稱，眼下腺的分泌物常結成硬塊，用來磨擦於生活領域的樹上做記號。本種體長180至240公分，雄鹿肩高可至120公分，雌鹿則約80公分，尾長則均約15公分。幼年時水鹿身上有斑點，成年後斑點會褪去。雄鹿具有「三尖二叉」狀的角，三歲後會開始分岔，至五歲則維持兩叉三尖不再分支。鹿角每年硬化後會脫落重長，其主幹比梅花鹿短而粗。臺灣水鹿為臺灣特有的亞種，多於清晨與黃昏活動，棲息於海拔1000公尺以上中高海拔的原始森林，多活動於近水源的草地，以樹葉與嫩草為主食。目前主要分布於中央山脈與花東山區，民間養殖族群不少，但野外族群並不常見。</string>
    <string name="logo5">食蟹獴\n，又名棕簑貓 是一種產於中國南方、台灣、印度西北、尼泊爾、緬甸、東南亞等，體色通常為灰色，面部和頸部兩側有白色的斑點。除了以蟹類為食外，它們也吃魚、蝸牛、蛙、嚙齒類、鳥、爬行類以及昆蟲。食蟹獴日行性、家族群聚，指間有半蹼，善泳亦會潛水。一般居住在水邊、濕地中，或則靠海丘陵地帶。</string>
    <string name="logo6">麝貓\n又名麝香貓，是靈貓科的大部份物種。牠們的身體細小及柔軟，大部份棲息在樹上。一般外表像貓，但鼻端較長及甚至是尖的，麝貓是舊世界熱帶的原住民。麝貓全年都會生育，妊娠期為6081日。一些物種每年會產兩胎。每一胎約有1到6隻幼貓，出生時已經有毛。有關牠們的交配習性所知甚少。麝貓是雜食性的，主要吃肉類（不論是獵物或腐屍）、生果、蛋及甚至樹根。椰子狸喜歡吃咖啡的果實。留下的咖啡豆就成為印尼的麝香貓咖啡。麝貓是產生香水中的穩定劑的重要來源，牠們曾因此而大量被殺，仰賴這些物質的再利用。麝貓的圍肛腺周圍會殘留其麝香排泄物，要取得這些物質就要刮牠的圍肛腺，會令麝貓非常疼痛。雄性及雌性麝貓都會排出這些有強烈氣味的排泄物。</string>
    <string name="logo7">台灣穿山甲\n又稱台灣鯪鯉、悶仔、土龜，是一種身上覆有鱗片的哺乳動物。該物種為穿山甲屬中華穿山甲的一個亞種，也是台灣的一個特有亞種。目前，因棲地流失及人類過度捕食等因素，該物種已瀕臨絕滅。台灣穿山甲的前爪很大因此很有力，非常適合爬樹，但後腳因爪較小而不適於抓住樹幹，所以它們會用尾巴代替後腳，用尾部的鱗片插入樹幹，因此不易滑落。身體以螺旋的方式向上攀爬，在樹枝則可到掛，向下則以頭上腳下的方式倒退爬行。台灣穿山甲以舉尾蟻和白蟻為食，台灣穿山甲會用前爪挖開蟻巢，使螞蟻逃出，再用長舌頭舔食。台灣穿山甲的舌頭具有有黏性的唾液，可以沾黏食物後再送進口中。當台灣穿山甲遇到危險時，會縮成球狀，讓掠食者沒辦法下手。</string>
    <string name="logo8">山羌\n又稱羌仔、麂、麂子。鹿科麂屬的草食性動物， 分布於華中、華南地區與臺灣。該動物屬於珍貴稀有野生動物，面臨獵捕壓力。身長不及一米，雄性有短角而雌性僅有骨質隆起，在鹿科動物中公山羌的角並不特化，且保有其他鹿科動物所沒有的上犬齒，靠保護色及靈敏的行動來避敵，雄性額內緣至角基內側各有一黑色條紋，雌性則在額前有盾型班塊，白色的腹部以及尾巴下方的白色也是主要特徵，叫聲似犬吠。山羌雌性大約五個月才性成熟，開始排卵，排卵間隔約14天，每胎生一隻，懷孕期七至八個月，生產後三至四天便可再受孕，不受哺乳影響，因此牠們全年均可連續繁殖。雌性懷孕會形成集體的大量懷孕週期，幼仔多數同期出生，與一般草食性動物的年週期繁殖不同。雄性山羌則約九個月達到性成熟，在換角期間仍具製造精子的生殖力，不同於一般鹿科動物。</string>
    <string name="logo9">台灣小黃鼠狼\n又作臺灣高山小黃鼠狼，為鼬科鼬屬的動物。本種為台灣的特有種，在1969年時由台北預防醫學研究所在合歡山地區進行疾病動物媒介研究時捕捉到，但當時被當作黃鼠狼的幼體（標本現存放於國立台中自然科學博物館）。直到1997年由東海大學教授林良恭再度發現，經過外型對比、核行及行為上的判定，正式發表為新物種。外型和伶鼬相似，上（頭部到尾巴）為黃褐色，下方（腹部）為白色。體長幾乎和原子筆差不多，但稍微長一點，體重也不到60公克。目前對此詳細的習性並不多，只知道台灣高山小黃鼠狼大多分布在高海拔例如合歡山這樣的地區。食性不明，只知道台灣高山小黃鼠狼會捕捉野鼠。</string>
    <string name="logo10">果子狸\n又名花面狸、白鼻心，一種靈貓科的哺乳動物，果子狸軀體瘦長，成年個體長45到65厘米，重4500到8000克。果子狸外形似家貓，顏面狹長，鼻吻前突，頸短面粗，眼睛大而圓，兩耳較小，上層背部兩側有20根黑白相間、富有彈性的鬍鬚，頭部被毛有7塊大小不同黑、白相間的斑塊，故稱花面狸。果子狸四肢粗短，足具5趾，趾端有爪，非常鋒利。趾掌無毛，掌麵皮肉增厚，富有彈性。尾巴粗壯有力，長30—40厘米，約占體長的2／3，在跳躍、攀登時能起平衡作用。肛門附近有臭腺，遭遇敵人時會釋出異味藉此嚇跑敵人。果子狸食性獨特，主要吃植物，尤其喜食水果，與別的食肉目動物不同。動物性食物是次要食物。鼠類是果子狸最喜食的動物性食物，也吃蛇、鳥、蛙、蚯蚓、小昆蟲等。果子狸善攀緣，屬夜行性動物，具有晝伏夜出的習性。人工飼養的果子狸這種習性並不明顯。</string>
    <string name="logo11">臺灣獼猴\n又稱，台灣特有種，珍稀野生動物，屬舊世界猴。也是除了人類外台灣唯一的靈長類動物，和日本獼猴、普通獼猴有血緣關係。臺灣的原生種，分布於由海平面至海拔三千公尺以下的地區。臺灣獼猴的前肢比後肢短，各肢具有五趾。頭圓，臉扁，額裸出，顏面呈淡紫色，或深或淡，隨個體的不同而有差異，所以台灣原住民將其分為白臉與紅臉，臉頰上並長有粗雜的長鬚，尾粗狀多毛，全身被厚而軟的毛，冬季呈棕灰色，夏季呈棕綠色，四肢較黑故有黑肢猿之稱。股間有顯著的紅棕色的大斑。一般而言，雌猴體型較雄猴小，顏色也較淡。其主食以水果為主，最愛香蕉、芒果、荔枝、柳丁等。</string>
    <string name="logo12">抹香鯨\n又稱巨抹香鯨、卡切拉特鯨，是世界上最大的齒鯨。抹香鯨在動物王國中具有的「潛水高手」的美譽。根據目前的觀測紀錄抹香鯨可深潛到一千公尺多，抹香鯨是體型最大的齒鯨，主要吃魷魚，常出沒在水深超過一千公尺的地方，世界三大洋均可見到抹香鯨的身影，也有季節性的洄游習性。臺灣東部海域在夏季賞鯨時，也可看到抹香鯨出沒的紀錄。抹香鯨的身型具有明顯的雌雄二型性，雄型的體型較大，平均體長雌鯨約11米(1體重約15公噸)，雄鯨16米(體重約40到45公噸)。是全世界體型最大的齒鯨。新生兒的體長約4公尺，重達1公噸。</string>
    <string name="logo13">黑面琵鷺\n又名小琵鷺、黑面鷺、黑琵鷺、琵琶嘴鷺，俗稱飯匙鳥、黑面勺嘴，台灣賞鳥人士則俗稱為「黑琵」。因其扁平如湯匙狀的長嘴，與中國樂器中的琵琶極為相似，因而得名；亦因其姿態優雅，又有「黑面天使」和「黑面舞者」的雅稱；屬琵鷺亞科的鳥類全世界共六種，其中以黑面琵鷺數量最為稀少（已知六種琵鷺當中唯黑面琵鷺屬瀕危物種），屬全球瀕危物種類別之一。於故當黑面琵鷺在每年 1月至 3月渡冬時，東南亞觀鳥者會到處觀測關注其過冬狀況並統計數量。黑面琵鷺現時只活躍於東亞及東南亞地區。</string>
    <string name="logo14">短尾信天翁\n是最大的信天翁，翅膀展開可以有三米寬。成年鳥可達11公斤。它也是唯一白色身體的信天翁，只在頭頸泛淡黃色。它擁有白背，翅膀外半部是黑色，藍尖粉紅色的嘴，淡藍色的腿腳。年輕的鳥是棕黑色，成長期間逐漸發白。在日本稱作信天翁、阿房鳥、阿呆鳥。短尾信天翁主要吃海面的魚卵，蝦和烏賊，一般在清晨或日落的時間進食。短尾信天翁可以活到40到60年。它們可以在海上飛5年之後才回到它出生的島嶼陸地。配對為終身，一般在6歲時開始。每年在10月底回到同一個地方見面，以沙、灌木枝和火山岩築巢。一對只下一個蛋，父母輪流孵蛋，約65天孵出。5月底6月初，小鳥幾乎長成的時候，父母拋棄鳥巢和小鳥。小鳥會很快自己練習成功飛翔。</string>
    <string name="logo15">藍腹鷳\n，又名藍鷴、藍鷳、藍腹鷴、臺灣藍鷳、華雞或斯文豪氏鷴，俗稱臺灣山雞，是一種大型雉類，雄性通體藍色。它的近緣種白鷳與之形態相似，都在高山林地生活，但二者體色一藍一白，且藍腹鷳只在台灣山區有分布，這對於研究動物地理、系統演化有著重要的意義。</string>
    <string name="logo16">環頸雉\n又名野雞、環頸雉、華蟲，是雉科雉屬一個物種。雄性環頸雉的羽毛非常多樣，從幾乎白色到幾乎黑色都有，這是由於馴化及與綠雉雜交，加上放生不同的亞種雜交的結果。雄鳥體長約76到89公分。尾長，黑色有條紋，占體長近50公分。身體羽色通常為棕褐色，有多種變型，頭部深綠色，有小型冠羽和紅色眼斑肉垂。白色頸環有或退化。雌鳥體長約53到63公分，其中尾部大約20公分。羽色單調，全身為有雜斑的棕褐色至灰色。稚鳥體色和雌鳥一樣，大約孵化後10個禮拜雄鳥才會在頭、胸、背部長出亮麗的羽毛。</string>
    <string name="logo17">蘭嶼角鴞\n又名琉球角鴞(達悟語：Totoo)，是一種小型的貓頭鷹，多數分布在台灣東南的蘭嶼島上、琉球群島和菲律賓群島北部，是那裡的留鳥。蘭嶼島上的達悟族人依它的叫聲給它起名叫「嘟嘟物」totoo。蘭嶼角鴞主要分布在蘭嶼島，據台灣中央研究院的研究，現在蘭嶼島上大約有1000隻。另外有少量分布在菲律賓和琉球群島。蘭嶼角鴞在台灣蘭嶼島是當地的留鳥，是否也會遷徙到其他地區、其他島嶼間是否也有遷徙還不得而知，地理的隔離使蘭嶼角鴞形成四個亞種。蘭嶼角鴞體形較小，體長約22厘米，體色棕褐，有豎起的耳羽。虹膜黃色。蘭嶼角鴞的叫聲很有特點，雌雄的叫聲差異明顯，通過這些叫聲在黑暗的生活中交流。蘭嶼角鴞生活在雨林之中，是夜行性。它們的食物以昆蟲為主，蘭嶼島上大量的蟋蟀若蟲和蜈蚣是他們常吃的食物，吃食時經常用一隻腳抓握，往嘴裡送的同時閉上雙眼，樣子很陶醉。白天時，它們常站在樹樁上睡覺。1985年前，國外的研究者曾經描述蘭嶼角鴞吃齧齒類。但據中央研究院多年來的研究，由於蘭嶼島上的嚙齒類體形較大，它們並不吃哺乳類，只是有時吃繡眼。由於不吃哺乳類，它們很少吐唾餘，對於它們的食性多通過糞便研究。</string>
    <string name="logo18">帝雉\n，又稱台灣帝雉、黑長尾雉、羅漢腳雉、海雉、烏雉，台灣特有的長尾雉屬鳥類。分布於台灣的中、高海拔山區，最高曾見於3850公尺附近，是台灣的雉科鳥類中棲息於最高海拔者。帝雉被列為世界近危鳥類，與台灣藍腹鷴同被列於國際自然保護聯盟瀕危物種紅色名錄中。帝雉也是所有台灣特有種鳥類中體形最大、羽色最高貴的，因而台灣推動選其為「國鳥」。黑長尾雉的形象還被用在1000元新台幣的背面，以及中華航空於2016年引進的新型客機空中巴士A350。</string>
    <string name="logo19">台灣雲豹\n，貓科雲豹的一個亞種，為台灣特有亞種動物，是台灣本島少數的大型肉食野生動物之一，體形僅次於台灣黑熊。1862年首次被記錄在科學文獻上，由英國博物學家史溫侯發表。台灣雲豹一直被視為是一種珍貴的野生動物，台灣原住民，如魯凱族，視獵捕雲豹為一種禁忌；魯凱族好茶部落將台灣雲豹視為他們的先祖，而排灣族認為雲豹是獵人死去後的轉世。台灣雲豹原為棲息在中低海拔闊葉林間的大型貓科動物，在土地被大量開發之後，台灣雲豹被迫遷往高山，最後的棲息地是玉山和北大武山。自80年代中期起，便無人再親眼看到野生台灣雲豹的蹤跡。經過台美生態學者合組研究團隊調查，歷經13年研究，2013年4月宣布台灣雲豹可能已經滅絕，2014年4月認定台灣雲豹已經滅絕</string>
    <string name="logo20">臺灣黑熊\n是臺灣特有的亞洲黑熊亞種，胸前的V字型白色斑紋(太魯閣語稱做rabang)是亞洲黑熊共有的特徵。臺灣黑熊極為強壯，體長120到180公分，肩寬60到70公分，最重可達200公斤。牠的頭呈圓形、頸部短、眼睛小、吻部很長。牠的頭約26到35公分長，頭圍約40到60公分。耳長8到12公分，牠的吻部形狀像狗，因此許多人習慣稱呼牠為「狗熊」。牠的尾巴短，通常不到10公分。身體覆蓋著粗，濃密而具有光澤的黑毛，在頸部的毛可以超過10公分長。牠的頷部末端是白色的，在胸口有黃色或白色毛呈V字型、或是弦月的形狀，因此英文中也有「月熊」（Moon Bear）的稱呼。樹上幼熊除了交配期或撫育小熊期間外，通常獨居。白天在樹洞或岩洞內休息，黃昏或夜晚時外出覓食。活動範圍大，擅爬樹，孔武有力，在受傷、受逼迫或保護幼熊時攻擊性強，速度快。冬季時並不冬眠，可能會移至較低海拔區域覓食。 屬雜食性，以小型動物、昆蟲、植物嫩葉、嫩芽、果實為食，台灣黑熊也喜歡吃蜂蜜和蜂蛹，也會在河邊捕魚、捕螃蟹、捕蝦等食用。台灣黑熊不會主動攻擊人類，若碰上，最好是靜靜、慢慢地退開，不可轉身驚慌大叫和狂奔，這樣可能會引發黑熊加速攻擊</string>

    <string name="menu_gallery">動物圖鑑</string>
    <string name="menu_volume">聲音調整</string>
    <string name="menu_reset">資料重置</string>
    <string name="menu_copyright">資料出處</string>
    <string name="menu_developer">製作團隊</string>

    <string name="reset_info">資料重置</string>
    <string name="copyright_info">網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n\n網站名：\n網址：\n</string>
    <string name="developer_info">崇憲\n\n崇文\n\n彥顯\n\n維隆\n\n琇晴</string>

</resources>
