<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.esy.mobilehost.android.savelife.LoginActivity"
    style="@style/login">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:id="@+id/main"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="進入遊戲"
        android:id="@+id/Benter"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest"
        android:id="@+id/guest"
        android:textSize="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="新增帳號"
        android:id="@+id/newUser"
        android:layout_above="@+id/Benter"
        android:layout_alignLeft="@+id/Benter"
        android:layout_alignStart="@+id/Benter" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main"
        android:id="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user01"
            android:id="@+id/rBUser01"
            android:checked="false"
            android:textSize="30dp"
            android:layout_below="@+id/main"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user02"
            android:id="@+id/rBUser02"
            android:checked="false"
            android:textSize="30dp"
            android:layout_below="@+id/rBUser01"
            android:layout_alignLeft="@+id/rBUser01"
            android:layout_alignStart="@+id/rBUser01" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user03"
            android:id="@+id/rBUser03"
            android:checked="false"
            android:textSize="30dp"
            android:layout_below="@+id/rBUser02"
            android:layout_alignLeft="@+id/rBUser02"
            android:layout_alignStart="@+id/rBUser02" />
    </RadioGroup>

</RelativeLayout>
